# OpenTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  musor.txt  musor1  rebuild.bat
Docs/: CMakeListsDOCS.txt  Docs.txt  TODO  list
Docs/Modules/res/: Docs.txt
Docs/Modules/res/shaders/: Docs.txt
Docs/Modules/src/: MAIN_cpp.txt
Docs/Modules/src/Renderer/: Docs.txt
Docs/Modules/src/Resources/: Docs.txt
TemplateGenerator/Generator/: TemplateGenerator.cpp
TemplateGenerator/Tools/: tools.cpp
TemplateGenerator/main/: main.cpp
core/Application/: application.cpp  application.h
core/Includes/: includes.h
core/Modules/GUI/: gui.h
core/Modules/Renderer/: IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
core/Modules/ResourceManager/: ResourceManager.cpp  ResourceManager.h
core/Renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.h  ShaderProgram.h  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
core/ResourceManager/: ResourceManager.h
core/TemplateGenerator/Tools/: tools.cpp  tools.h
core/TemplateGenerator/main/: main.cpp  main.h
core/UI/: ui.cpp  ui.h
core/UI/GUI/: gui.cpp  gui.h
core/masterInclude/: masterInclude.h
core/resources/shaders/: fragment.txt  vSprite.txt
res/shaders/: fSprite.txt  fragment.txt  vertex.txt
src/: main.cpp
src/GUI/: gui.cpp  gui.h
src/Generator/: TemplateGenerator.cpp
src/Renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/Tools/: tools.cpp  tools.h
